# Fusion-Finder-Desktop

./: README.md  bunfig.toml  package.json  svelte.config.js  vite.config.js
.github/workflows/: ci.yml  release.yml
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: favourites.rs  infinite_fusion.rs  lib.rs  macros.rs  main.rs  sprites.rs
src-tauri/src/infinite_fusion/: abilities.rs  area.rs  bootstrap.rs  encounters.rs  expert_moves.rs  filters.rs  inspect.rs  items.rs  legendaries.rs  map_encounters.rs  move_card.rs  moves.rs  settings_data.rs  species.rs  types.rs
src-tauri/src/infinite_fusion/filters/: ability_filter.rs  custom_sprite_filter.rs  move_filter.rs  stat_filter.rs  type_filter.rs
src-tauri/src/infinite_fusion/moves/: flags.rs
src-tauri/src/infinite_fusion/species/: base_stats.rs  evolution.rs  level_move.rs  name_halves.rs
src/lib/: AreaPanel.svelte  Combobox.svelte  FusionInspector.svelte  MoveHoverHost.svelte  RangeSlider.svelte  RingLoader.svelte  Setup.svelte  Sprite.svelte  bindings.ts  favourites.svelte.ts  moveCard.svelte.ts  searchFilters.svelte.ts  typeIcon.ts  utils.ts
src/lib/inspector/: InspectorAbilities.svelte  InspectorEvoLines.svelte  InspectorEvolution.svelte  InspectorMatchups.svelte  InspectorMoves.svelte  InspectorSprite.svelte  InspectorStats.svelte  format.ts
src/lib/search/: DefenseMatchupPicker.svelte  FilterSidebar.svelte  MetricFlyout.svelte  MetricPicker.svelte  MovePicker.svelte  RangeSlider.svelte  ResultsGrid.svelte  ResultsToolbar.svelte  StatSliders.svelte  TypePicker.svelte
src/routes/: +page.svelte
