[package]
name = "fusion-finder-desktop"
version = "0.1.0"
description = "A desktop companion app for Pokémon Infinite Fusion"
authors = ["Adam Stopher <adam.stopher@protonmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fusion_finder_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memchr = { version = "2.8.0", features = ["use_std"] }
roaring = "0.11.4"
reikland = "0.2.0"
regex = "1.12.3"
bitflags = "2.11.1"
indexmap = "2.14.0"
image = { version = "0.25.10", default-features = false, features = [] }
phf = { version = "0.13.1", features = ["macros"] }
