[package]
name = "fusion-finder-desktop"
version = "0.1.0"
description = "A desktop companion app for Pokémon Infinite Fusion"
authors = ["Adam Stopher <adam.stopher@protonmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fusion_finder_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2.7.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
memchr = { version = "2.8.0", features = ["use_std"] }
roaring = "0.11.4"
reikland = "0.2.0"
regex = "1.12.3"
bitflags = "2.11.1"
indexmap = { version = "2.14.0", features = ["serde"] }
image = { version = "0.25.10", default-features = false, features = ["png"] }
phf = { version = "0.13.1", features = ["macros"] }
strum = { version = "0.28.0", features = ["derive"] }
snafu = "0.9.1"
itertools = "0.14.0"
moka = { version = "0.12", features = ["future"] }
reqwest = { version = "0.13.4", default-features = false, features = [
    "default-tls",
] }
tokio = { version = "1", features = ["fs", "rt", "macros", "sync", "time"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
